# pawtocomplete.nvim

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: test.yml
lua/pawtocomplete/: completion.lua  completion_menu.lua  config.lua  init.lua  paw.lua  paw_show.lua  signature.lua  sparky.lua  util.lua  walk.lua
src/: lfu.h  paw.cc  paw.h  paw_show_webp.cc  sparky.cc
tests/pawtocomplete/: paw_spec.lua
tools/: close.sh  idle.sh  sleep.sh  tired.sh
